databaseissueresolved